# SlideQuest

./: .env.sample  .flake8  .gitignore  AGENTS.md  LICENSE  Liesmich.md  Makefile  README.md  Tasks.md  pyproject.toml
.github/workflows/: python.yml
MTMTContent/: LayoutArea.qml  LayoutParser.js  LayoutPreview.qml
data/: slides.json
data/notes/: note-20251110-220459.md
docs/: Handbook.md  Handbuch.md  govee_inventory.md
docs/ocs/: ai_section_refactor_plan.md  explorer_refactor_plan.md  explorer_reorder_plan.md  global_refactor_plan.md  style_prompt_binding_audit.md
src/slidequest/: app.py  dev.py
src/slidequest/models/: layouts.py  slide.py
src/slidequest/services/: audio_service.py  govee_service.py  project_service.py  replicate_service.py  storage.py  token_store.py  transcription_service.py
src/slidequest/ui/: constants.py
src/slidequest/utils/: media.py
src/slidequest/viewmodels/: master.py
src/slidequest/views/: __init__.py  launcher.py  master_window.py  presentation_window.py
src/slidequest/views/master/: ai_models.py  ai_prompt_binding.py  ai_reference_store.py  ai_reference_worker.py  ai_section.py  ai_status.py  ai_style_controller.py  ai_telemetry.py  chrome_section.py  (+7 more)
tests/: conftest.py  test_ai_prompt_binding.py  test_ai_reference_store.py  test_ai_reference_worker.py  test_ai_section_integration.py  test_ai_status_indicator.py  test_ai_style_controller.py  test_ai_telemetry.py  test_explorer_controller.py  test_master_viewmodel_playlist.py  test_playlist_list_widget.py  test_secure_token_store.py  test_slide_item_widget.py
(+8 files in other folders)
