[project]
name = "slidequest"
version = "0.1.0"
description = "SlideQuest PySide6 prototype"
readme = "README.md"
authors = [
    { name = "Marc Wempe", email = "marc.wempe@wetech.de" }
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7,<7",
    "watchfiles>=0.21",
]

[project.scripts]
slidequest = "slidequest:main"
slidequest-dev = "slidequest.dev:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
