[project]
name = "slidequest"
version = "0.1.0"
description = "SlideQuest PySide6 prototype"
readme = "README.md"
authors = [
    { name = "Marc Wempe", email = "marc.wempe@wetech.de" }
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7,<7",
    "watchfiles>=0.21",
    "numpy>=1.26",
    "sounddevice>=0.4",
    "faster-whisper>=1.0",
    "huggingface-hub>=0.23",
    "webrtcvad>=2.0",
    "pyannote.audio>=3.1",
    "python-dotenv>=1.0",
    "replicate>=0.26",
]

[dependency-groups]
dev = [
    "flake8>=7.0",
    "pytest>=8.0",
]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "./.venv",
    "*/.venv/*",
    "build",
    "dist",
]
max-line-length = 150
extend-ignore = [
    "E203",
]

[project.scripts]
slidequest = "slidequest:main"
slidequest-dev = "slidequest.dev:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
